# aoc-2024

./: .gitignore  Cargo.toml  LICENSE  README.md  optimized_build.sh
src/: lib.rs  main.rs
src/days/: day0.rs  day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs
