[package]
name = "aoc_2024"
version = "0.1.0"
authors = ["RoccoDev <hey@rocco.dev>"]
edition = "2021"

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
regex = "1"
fxhash = "0.2.1"
rayon = "1"
enum-map = "2.4"
enumset = "1.0.12"
itertools = "0.12"
num-bigint = "0.4"
num-traits = "0.2"

[profile.release]
lto = true
codegen-units = 1
